--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,3 +10,29 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name:  Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 3.1.101
+
+    - name: Deploy site
+      shell: bash
+      env:
+        GITHUB_TOKEN: ${{ secrets.GithubToken }}
+        TEMPLATE_URL: "https://github.com/codernr/startbootstrap-clean-blog.git"
+      run: |
+        git clone $TEMPLATE_URL templates clean-blog
+        latest_data=$(curl -s "https://api.github.com/repos/codernr/bloggen-net/releases/latest")
+        download_url=$(egrep -oh -m 1 "(https://github.com/codernr/bloggen-net/releases/download/v[0-9]\.[0-9]\.[0-9]/v[0-9]\.[0-9]\.[0-9]\.tar\.gz)" <<< $latest_data)
+        curl -L $download_url --output bloggen-net.tar.gz
+        tar -zxvf bloggen-net.tar.gz
+        cd deploy
+        dotnet Bloggen.Net.dll -s ../ -o bloggen-output
+        git clone "https://codernr:${GITHUB_TOKEN}@github.com/codernr/bloggen-net.git"
+        rm -rf codernr.github.io/* !(".git")
+        cp -r bloggen-output/ codernr.github.io/
+        cd codernr.github.io
+        git add --all
+        git commit -am "Automatic github pages update from blog-source CI"
+        git push
