--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GithubToken }}
         TEMPLATE_URL: "https://github.com/codernr/startbootstrap-clean-blog.git"
       run: |
-        git clone $TEMPLATE_URL templates clean-blog
+        git clone $TEMPLATE_URL templates/clean-blog
         latest_data=$(curl -s "https://api.github.com/repos/codernr/bloggen-net/releases/latest")
         download_url=$(egrep -oh -m 1 "(https://github.com/codernr/bloggen-net/releases/download/v[0-9]\.[0-9]\.[0-9]/v[0-9]\.[0-9]\.[0-9]\.tar\.gz)" <<< $latest_data)
         curl -L $download_url --output bloggen-net.tar.gz
