--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,8 @@ jobs:
       shell: bash
       run: |
         cd deploy
-        dotnet Bloggen.Net.dll -s "${PWD}/../" -o bloggen-output
+        echo $PWD
+        dotnet Bloggen.Net.dll -s "${PWD}/../" -o "${PWD}/bloggen-output"
     
     - name: Update blog repository
       shell: bash
@@ -43,6 +44,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GithubToken }}
         USER_MAIL: ${{ secrets.Mail }}
       run: |
+        echo $PWD
         git clone "https://codernr:${GITHUB_TOKEN}@github.com/codernr/codernr.github.io.git"
         rm -r codernr.github.io/*/ codernr.github.io/*.html
         cp -rf bloggen-output/ codernr.github.io/
