--- a/config.yml
+++ b/config.yml
@@ -3,6 +3,7 @@ subHeading: Learn, code, rock'n'roll
 template: clean-blog
 url: "https://codernr.github.io"
 postsPerPage: 10
+dateFormat: 'yyyy-MM-dd HH:mm'
 metaProperties: 
   - property: "og:image"
     content: "/assets/img/og-image.png"
